Revert "Removing ErrorProne"
This reverts commit c43bf0b02c93687522cdc7f9e1d5b7a56287459f.